La premiere commit de la version K3 propre a IUFP de ségou IUFP-GESTION V1